--- a/templates/layouts/navbar.twig
+++ b/templates/layouts/navbar.twig
@@ -6,13 +6,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Accueil<span class="sr-only">(current)</span></a>
+                <li class="nav-item {% if url =='accueil' %} active {% endif %}">
+                    <a class="nav-link" href="/">Accueil</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item {% if url == 'articles' %} active {% endif %}">
                     <a class="nav-link" href="/articles">Articles</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item {% if url == 'contact' %} active {% endif %}">
                     <a class="nav-link" href="/contact">Contact</a>
                 </li>
                 <li class="nav-item">
