--- a/templates/frontend/login/index.twig
+++ b/templates/frontend/login/index.twig
@@ -9,6 +9,7 @@
     <div class="container mb-5">
         <div class="row justify-content-center">
             <div class="col col-lg-6">
+        {% include 'backend/layouts/alert.twig' %}
                 <div class="card">
                     <div class="card-body">
                         {% include 'frontend/login/form.twig' %}
