php mailer sendemail

--- a/templates/frontend/contact/index.twig
+++ b/templates/frontend/contact/index.twig
@@ -16,7 +16,7 @@
                         <div class="card-header"><i class="fa fa-envelope"></i>
                         </div>
                         <div class="card-body">
-                            <form action="#" method="POST">
+                            <form action="/contact/send" method="POST">
                                 <div class="form-group">
                                     <label for="name">Nom</label>
                                     <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp" placeholder="Entrer nom" required>
