fix folder upload

--- a/templates/backend/dashboard/post/formEdit.twig
+++ b/templates/backend/dashboard/post/formEdit.twig
@@ -22,7 +22,7 @@
                         <div class="col-md-5 col-sm-12">
                             <div class="form-group">
                                 <label for="picture">IMAGE</label>
-                                <img src="/uploads/posts/{{ post.image }}" alt="{{ post.image }}" class="img-thumbnail img-crop-thumb">
+                                <img src="/uploads/images/{{ post.image }}" alt="{{ post.image }}" class="img-thumbnail img-crop-thumb">
                                 <div class="form-group mt-2">
                                     <div class="custom-file">
                                         <input type="file" class="custom-file-input" id="imagePost" name="image_post">
