--- a/templates/frontend/profil/formEdit.twig
+++ b/templates/frontend/profil/formEdit.twig
@@ -51,7 +51,7 @@
                         <input type="file" class="form-control" id="image_profil" aria-describedby="profil_help" name="avatar">
                         <small id="profil_help" class="form-text text-muted">Votre image de profil doit être inférieur ou égal à 2 Mo aux formats (jpeg, jpg, png).</small>
                     </div>
-                    <img src="/uploads/posts/{{ user.avatar }}" alt="Image de profil" class="img-thumbnail" width="200">
+                    <img src="/uploads/images/{{ user.avatar }}" alt="Image de profil" class="img-thumbnail" width="200">
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
