--- a/templates/frontend/contact/header.twig
+++ b/templates/frontend/contact/header.twig
@@ -1,11 +1,20 @@
-<header class="bg-light py-5 mb-5">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col-lg-12">
-                <h1 class="display-4 mt-5 mb-2">Hi ! Moi c'est Bastien.</h1>
+<header class="bg-light pt-5 pb-5 ">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-12 order-2 order-md-12">
+                <h1 class="display-4 font-weight-bold mt-5 mb-2">Je suis là,</h1>
                 <p class="lead mb-5">
-                    Projet 5 de mon parcours Développeur d'application PHP/Symfony chez OpenClassrooms. Création d'un Blog via une architecture MVC Orienté objet.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad at consequuntur deleniti dignissimos dolor eius facilis harum hic iure laudantium molestias odio quae quaerat quo rem sapiente sint ullam, voluptates?
+                    <br><br>
+                    <span class="text-theme-primary">Je ne partage jamais votre e-mail avec quelqu'un d'autre.</span>
+                    <br><br>
+                    <a class="btn btn-outline-light text-theme-primary mb-1" href="https://github.com/lechatgraphique"><i class="fab fa-github"></i> Dépôt Github</a>
+                    <a class="btn btn-outline-light text-theme-primary mb-1" href="https://www.linkedin.com/in/bastien-clement"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+                    <a class="btn btn-outline-light text-theme-primary mb-1" href="https://www.instagram.com/bc_lechatgraphique"><i class="fas fa-hashtag"></i> Instagram</a>
                 </p>
+            </div>
+            <div class="col-md-6 col-sm-12 order-1 order-md-12 ">
+                <img src="https://themes.3rdwavemedia.com/coderpro/bs4/assets/images/promo-figure-alt.svg" class="img-fluid" alt="Responsive image">
             </div>
         </div>
     </div>
