--- a/templates/frontend/home/header.twig
+++ b/templates/frontend/home/header.twig
@@ -1,11 +1,22 @@
-<header class="bg-light py-5 mb-5">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col-lg-12">
-                <h1 class="display-4 mt-5 mb-2">Hello World.</h1>
+<header class="bg-light pt-5 pb-5 ">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-12 order-2 order-md-12">
+                <h1 class="display-4 font-weight-bold mt-5 mb-2">Hello,</h1>
                 <p class="lead mb-5">
-                    Projet 5 de mon parcours Développeur d'application PHP/Symfony chez OpenClassrooms. Création d'un Blog via une architecture MVC Orienté objet.
+                    Je m'appelle <b>Bastien</b>. Je suis freelance <b>Graphiste Print</b> &amp; <b> Ui designer</b> depuis 7 ans
+                    et je vis en région parisienne. À travers ce blog je souhaite partager mon nouveau défi, <b>devenir
+                        développeur d’applications web (FullStack).</b>
+                    <br><br>
+                    <span class="text-theme-primary">Projet 5 de mon parcours développeur d'application PHP/Symfony chez OpenClassrooms.</span>
+                    <br><br>
+                    <a class="btn btn-outline-light text-theme-primary mb-1" href="https://github.com/lechatgraphique"><i class="fab fa-github"></i> Dépôt Github</a>
+                    <a class="btn btn-outline-light text-theme-primary mb-1" href="https://www.linkedin.com/in/bastien-clement"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+                    <a class="btn btn-outline-light text-theme-primary mb-1" href="https://www.instagram.com/bc_lechatgraphique"><i class="fas fa-hashtag"></i> Instagram</a>
                 </p>
+            </div>
+            <div class="col-md-6 col-sm-12 order-1 order-md-12 ">
+                <img src="https://themes.3rdwavemedia.com/coderpro/bs4/assets/images/promo-figure-alt.svg" class="img-fluid" alt="Responsive image">
             </div>
         </div>
     </div>
