--- a/templates/frontend/inscription/form.twig
+++ b/templates/frontend/inscription/form.twig
@@ -47,7 +47,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12 mt-3">
-            <button type="submit" class="btn btn-primary btn-lg btn-block">S'inscrire</button>
+            <button type="submit" class="btn btn-outline-light text-theme-primary btn-block">S'inscrire</button>
         </div>
     </div>
 </form>
