--- a/templates/frontend/inscription/index.twig
+++ b/templates/frontend/inscription/index.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
     {% include 'frontend/inscription/header.twig' %}
-    <div class="container mb-5">
+    <div class="container mt-5 mb-5">
         {% include 'backend/layouts/alert.twig' %}
         <div class="row justify-content-center">
             <div class="col col-lg-6">
