--- a/templates/frontend/post/comment/form.twig
+++ b/templates/frontend/post/comment/form.twig
@@ -3,7 +3,7 @@
     <div class="card my-4">
         <h5 class="card-header">Ajouter un commentaire</h5>
         <div class="card-body">
-            <a class="btn btn-primary" href="/inscription" role="button">Inscription</a>
+            <a class="btn btn-outline-light text-theme-primary" href="/inscription" role="button">Inscription</a>
         </div>
     </div>
 {% else %}
@@ -16,7 +16,7 @@
                 <div class="form-group">
                     <textarea class="form-control" rows="3" name="content"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Envoyer</button>
+                <button type="submit" class="btn btn-outline-light text-theme-primary">Envoyer</button>
             </form>
         </div>
     </div>
