--- a/templates/layouts/footer.twig
+++ b/templates/layouts/footer.twig
@@ -1,8 +1,19 @@
-<pre>
-    {{ dump(session) }}
-</pre>
-<footer class="py-3 bg-dark fixed-bottom">
+<footer class="mt-5 py-3 bg-light">
     <div class="container">
-        <small class="m-0 text-white">Copyright &copy; Projet 5 OCR • Blog PHP 2020 </small>
+
+        <div class="text-center">
+            <div class="d-flex justify-content-center text-center mt-4">
+                <a class="text-secondary" href="https://github.com/lechatgraphique" target="_blank"><i class="fab fa-github fa-lg mr-2"></i></a>
+                <a class="text-secondary" href="https://www.linkedin.com/in/bastien-clement" target="_blank"><i class="fab fa-linkedin fa-lg mr-2"></i></a>
+                <a class="text-secondary" href="https://www.instagram.com/bc_lechatgraphique/" target="_blank"><i class="fas fa-hashtag fa-lg mr-2"></i></a>
+            </div>
+
+            <div class="d-flex justify-content-center text-center mt-4">
+                <a class="text-secondary mr-2" href="#"><small>Conditions</small></a>
+                <a class="text-secondary mr-2" href="#"><small>Politique de confidentialité</small></a>
+                <a class="text-secondary" href="#"><small>Support</small></a>
+            </div>
+
+        </div>
     </div>
 </footer>
