--- a/templates/frontend/contact/index.twig
+++ b/templates/frontend/contact/index.twig
@@ -35,7 +35,7 @@
                                     <textarea class="form-control" id="message" name="message" rows="6" required></textarea>
                                 </div>
                                 <div class="mx-auto">
-                                    <button type="submit" class="btn btn-primary text-right">Envoyer</button></div>
+                                    <button type="submit" class="btn btn-outline-light text-theme-primary">Envoyer</button></div>
                             </form>
                         </div>
                     </div>
