--- a/templates/frontend/login/form.twig
+++ b/templates/frontend/login/form.twig
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
         <div class="col-sm-12 mt-3">
-            <button type="submit" class="btn btn-primary btn-lg btn-block">Connexion</button>
+            <button type="submit" class="btn btn-outline-light text-theme-primary btn-block">Connexion</button>
         </div>
     </div>
     <div class="row">
