--- a/templates/frontend/post/header.twig
+++ b/templates/frontend/post/header.twig
@@ -1,23 +1,22 @@
-<header class="bg-primary py-5 mb-5">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col-lg-12">
-                <h1 class="display-4 text-white mt-5 mb-2">{{ post.title }}</h1>
-                <p class="lead mb-5 text-white-50">
+<header class="bg-light pt-5 pb-5 mb-5">
+    <div class="container">
+        <div class="row">
+                <h1 class="display-4 font-weight-bold mt-5 mb-2">
+                    {{ post.title }}
+                    {% if post.category %}
+                        <span class="badge badge-secondary bg-theme-primary">{{ post.category.title }}</span>
+                    {% endif %}</h1>
+                <p class="lead mb-5">
                     {{ post.description }}
-                </p>
-                <hr>
-                <small class="text-white-50">
-                    Publié par <b>{{ post.author.firstName }} {{ post.author.lastName }}</b> <br>
+                    <br><br>
+                    Publié par <b>{{ post.author.firstName }} {{ post.author.lastName }}</b>
+                    <br>
                     <i class="far fa-calendar-alt"></i> {{ post.createdAt | dateFR }} |
                     <i class="far fa-comments"></i> {{ post.comments | length }} {%  if post.comments | length <= 1 %} commentaire {% else %} commentaires {% endif %}
-                </small>
-                <div class="mt-3">
-                    <span class="badge badge-light">
-                        <i class="fas fa-tags text-primary"></i> <a class=" btn-link" href="#" role="button">{{ post.category.title }}</a>
-                    </span>
-                </div>
+                </p>
             </div>
         </div>
     </div>
 </header>
+
+
