--- a/templates/frontend/post/show.twig
+++ b/templates/frontend/post/show.twig
@@ -11,9 +11,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-fluid rounded img-crop-thumb" src="/uploads/images/{{ post.image }}" alt="">
+                <img class="img-fluid rounded img-full" src="/uploads/images/{{ post.image }}" alt="">
                 <hr>
-                <p>{{ post.content }}</p>
+                <p class="lead">{{ post.content }}</p>
                 <hr>
             </div>
         </div>
