--- a/templates/layouts/default.twig
+++ b/templates/layouts/default.twig
@@ -17,8 +17,46 @@
             }
             .img-crop-thumb {
                 width: 100%;
-                height: 200px;
+                height: 250px;
                 object-fit: cover;
+            }
+            .img-full {
+                width: 100%;
+                height: 550px;
+                object-fit: cover;
+            }
+            .text-theme-primary {
+                color:#4550e6;
+            }
+            .bg-theme-primary {
+               background-color: #4550e6;
+             }
+            .btn-outline-light:hover {
+                color: #4550e6;
+                background-color: white;
+                border-color: #4550e6;
+            }
+            .btn-outline-light {
+                color: #4550e6;
+                border-color: #4550e6;
+            }
+            .btn-outline-light.focus, .btn-outline-light:focus {
+                box-shadow: 0 0 0 .2rem rgba(248,249,250,.5);
+            }
+            .btn-outline-light:not(:disabled):not(.disabled).active, .btn-outline-light:not(:disabled):not(.disabled):active, .show > .btn-outline-light.dropdown-toggle {
+                color: white;
+                background-color: #4550e6;
+                border-color: #4550e6;
+            }
+            .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
+                color: #4550e6;
+            }
+            .page-link {
+                color: #4550e6;
+            }
+            .form-control:focus {
+                border-color: #4550e6;
+                box-shadow: 0 0 0 .2rem #C7CAF7;
             }
         </style>
         {% block title %} {% endblock %}
