update user profil

--- a/templates/frontend/profil/formEdit.twig
+++ b/templates/frontend/profil/formEdit.twig
@@ -1,4 +1,4 @@
-{% extends 'backend/layouts/default.twig' %}
+{% extends 'layouts/default.twig' %}
 
 {% block title %}
     <title>Blog PHP : Profil</title>
@@ -10,39 +10,7 @@
         {% include 'backend/layouts/alert.twig' %}
         <small>PROFIL</small>
         <h1 class="my-4">Compte</h1>
-        <form action="/dashboard/profil/update/" method="post"  enctype="multipart/form-data">
-            {% if session.role == 'ADMINISTRATOR' %}
-                <div class="card shadow-sm mb-5 bg-white rounded border-0">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h5>Compte désactivé</h5>
-                                <p>Active ou désactive le compte de l'utilisateur.</p>
-                            </div>
-                            <div class="col-md-6 mb-2">
-                                <div class="custom-control custom-switch">
-                                    <input type="checkbox" class="custom-control-input" id="switch1" name="disabled" {% if user.disabled == 1 %} checked {% endif %}>
-                                    <label class="custom-control-label" for="switch1" ></label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <h5>Compte administrateur</h5>
-                                <p>Active les droits administrateur au compte utilisateur.</p>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="custom-control custom-switch">
-                                    <input type="checkbox" class="custom-control-input" id="switch2" name="role" {% if user.role == "ADMINISTRATOR" %} checked {% endif %}>
-                                    <label class="custom-control-label" for="switch2" ></label>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <hr>
-                                <a class="btn btn-outline-danger" href="/dashboard/utilisateurs/{{ user.id }}/delete" role="button">Supprimer le compte définitivement</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
+        <form action="/profil/update/" method="post"  enctype="multipart/form-data">
             <input type="hidden" name="id" value="{{ user.id }}">
             <div class="row my-5">
                 <div class="col-md-6">
